@@ -643,9 +643,16 @@ check.catchList <- function(catchList, sdfac = 1){
 #' @param fractiles List defining the fractiles of the 3 distributions of
 #'     'catch', 'bbmsy', and 'ffmsy'. By default (0.5) median is used for all 3
 #'     quantities. Please refer to the details for more information.
-#' @param breakpointB Breakpoint in terms of \eqn{B/B_{MSY}} for the
-#'     hockey-stick HCR. By default (0) no breakpoint is assumed. Please refer
-#'     to the details for more information.
+#' @param breakpointB Breakpoints in terms of \eqn{B/B_{MSY}} for the
+#'     hockey-stick HCR. By default (0) no breakpoint is assumed. If one value
+#'     is provided, F is reduced linearly to zero, if \eqn{B/B_{MSY}} is below
+#'     the breakpoint. If two values ara provided, F is reduced linearly to the
+#'     lower of the two provided values, if \eqn{B/B_{MSY}} is below the higher
+#'     and above the lower value, and F is zero if \eqn{B/B_{MSY}} is below the
+#'     lower value. The higher value corresponds to ICES's \eqn{B_{trigger}} and
+#'     the lower to ICES's \eqn{B_{lim}}. Note that the breakpoints are
+#'     evaluated at the start of the management period. Please refer to the
+#'     details for more information.
 #' @param safeguardB List defining an optional precautionary buffer by means of
 #'     a biomass reference level relative to \eqn{B/B_{MSY}} (\code{'limitB'};
 #'     default: 0, i.e. deactivating the PA buffer) and the risk aversion
@@ -663,6 +670,9 @@ check.catchList <- function(catchList, sdfac = 1){
 #'     details for more information.
 #' @param ctol Tolerance of \code{optimise} when finding F that leads to
 #'     provided target catch (via arguments \code{cfac} or \code{cabs})
+#' @param evalBreakpointB Time for the evaluation of the hockey-stick component
+#'     of the HCR: 0 indicating start of the mangement period and 1 indicating
+#'     the end of the management period (default: 0).
 #' @param verbose Should detailed outputs be provided (default: TRUE).
 #' @param dbg Debug flag, dbg=1 some output, dbg=2 more output.
 #' @param mancheck Should the time-dependent objects in \code{inp} be checked
@@ -687,6 +697,7 @@ make.man.inp <- function(rep, scenarioTitle = "",
                          intermediatePeriodCatchSDFac = 1,
                          intermediatePeriodCatchList = NULL,
                          ctol = 0.0001,
+                         evalBreakpointB = 0,
                          verbose = TRUE,
                          dbg = 0,
                          mancheck = TRUE){
@@ -713,7 +724,7 @@ make.man.inp <- function(rep, scenarioTitle = "",
     stopifnot(cabs >= 0)
     stopifnot(ffac >= 0)
     stopifnot(fabs >= 0)
-    stopifnot(breakpointB >= 0)
+    stopifnot(all(breakpointB >= 0))
     if(is.numeric(ffac) && is.numeric(cfac))
         stop("Both 'ffac' and 'cfac' provided, please choose either or neither.")
     if(is.numeric(fabs) && is.numeric(cabs))
@@ -722,6 +733,14 @@ make.man.inp <- function(rep, scenarioTitle = "",
         stop("Both 'ffac' and 'fabs' provided, please choose either or neither.")
     if(is.numeric(cfac) && is.numeric(cabs))
         stop("Both 'cfac' and 'cabs' provided, please choose either or neither.")
+    breakpointB <- sort(breakpointB)
+    if(length(breakpointB) > 1){
+        blim <- breakpointB[1]
+        btrigger <- breakpointB[2]
+    }else{
+        blim <- 0
+        btrigger <- breakpointB[1]
+    }
 
     ## copies
     repout <- reppa <- rep
@@ -795,9 +814,29 @@ make.man.inp <- function(rep, scenarioTitle = "",
             fmfmsy5 <- exp(qnorm(0.5, logFmFmsy[2], logFmFmsy[4]))
             fred <- fmfmsy5 / fmfmsyi
             ## BBmsy component (hockey stick HCR)
-            if(!is.na(breakpointB) && is.numeric(breakpointB) && breakpointB != 0){
-                bmbmsyi <- 1/breakpointB * exp(qnorm(fList$bbmsy, logBmBmsy[2], logBmBmsy[4]))
-                fred <- fred * min(1, bmbmsyi)
+            if(!is.na(btrigger) && is.numeric(btrigger) && btrigger != 0){
+                if(evalBreakpointB == 0){
+                    ## evaluated at the start of maninterval
+                    hsSlope <- 1/(btrigger-blim)
+                    hsIntercept <- - hsSlope * blim
+                    bmbmsyi <- hsSlope * exp(qnorm(fList$bbmsy, logBmBmsy[2], logBmBmsy[4])) + hsIntercept
+                    fred <- fred * min(1, max(0,bmbmsyi))
+                }else{
+                    ## evaluated at the end of maninterval
+                    ffac <- (fred + 1e-8) * fmsy / fmanstart
+                    inppa <- make.ffacvec(inp, ffac)
+                    inppa$reportmode <- 1
+                    reppa <- try(retape.spict(reppa, inppa, verbose=verbose, mancheck=FALSE), silent=TRUE)
+                    if(inherits(reppa,"try-error")){
+                        if(verbose) cat("The hockey-stick rule applied at the end of the management interval caused problems: The model could not be retaped. Omitting the hockey-stick component ('breakpointB') from the scenario!\n")
+                    }else{
+                        logBpBmsy2 <- get.par("logBpBmsy", reppa)
+                        hsSlope <- 1/(btrigger-blim)
+                        hsIntercept <- - hsSlope * blim
+                        bpbmsyi <- hsSlope * exp(qnorm(fList$bbmsy, logBpBmsy2[2], logBpBmsy2[4])) + hsIntercept
+                        fred <- fred * min(1, max(0,bpbmsyi))
+                    }
+                }
             }
             ## F reduction factor
             ffac <- (fred + 1e-8) * fmsy / fmanstart
@@ -883,9 +922,16 @@ make.man.inp <- function(rep, scenarioTitle = "",
 #' @param fractiles List defining the fractiles of the 3 distributions of
 #'     'catch', 'bbmsy', and 'ffmsy'. By default (0.5) median is used for all 3
 #'     quantities. Please refer to the details for more information.
-#' @param breakpointB Breakpoint in terms of \eqn{B/B_{MSY}} for the
-#'     hockey-stick HCR. By default (0) no breakpoint is assumed. Please refer
-#'     to the details for more information.
+#' @param breakpointB Breakpoints in terms of \eqn{B/B_{MSY}} for the
+#'     hockey-stick HCR. By default (0) no breakpoint is assumed. If one value
+#'     is provided, F is reduced linearly to zero, if \eqn{B/B_{MSY}} is below
+#'     the breakpoint. If two values ara provided, F is reduced linearly to the
+#'     lower of the two provided values, if \eqn{B/B_{MSY}} is below the higher
+#'     and above the lower value, and F is zero if \eqn{B/B_{MSY}} is below the
+#'     lower value. The higher value corresponds to ICES's \eqn{B_{trigger}} and
+#'     the lower to ICES's \eqn{B_{lim}}. Note that the breakpoints are
+#'     evaluated at the start of the management period. Please refer to the
+#'     details for more information.
 #' @param safeguardB List defining an optional precautionary buffer by means of
 #'     a biomass reference level relative to \eqn{B/B_{MSY}} (\code{'limitB'};
 #'     default: 0, i.e. deactivating the PA buffer) and the risk aversion
@@ -903,6 +949,9 @@ make.man.inp <- function(rep, scenarioTitle = "",
 #'     details for more information.
 #' @param ctol Tolerance of \code{optimise} when finding F that leads to
 #'     provided target catch (via arguments \code{cfac} or \code{cabs})
+#' @param evalBreakpointB Time for the evaluation of the hockey-stick component
+#'     of the HCR: 0 indicating start of the mangement period and 1 indicating
+#'     the end of the management period (default: 0).
 #' @param verbose Should detailed outputs be provided (default: TRUE).
 #' @param dbg Debug flag, dbg=1 some output, dbg=2 more output.
 #' @param mancheck Should the time-dependent objects in \code{inp} be checked
@@ -1047,6 +1096,7 @@ add.man.scenario <- function(rep, scenarioTitle = "",
                              intermediatePeriodCatchSDFac = 1,
                              intermediatePeriodCatchList = NULL,
                              ctol = 0.001,
+                             evalBreakpointB = 0,
                              verbose = TRUE,
                              dbg = 0,
                              mancheck = TRUE){
@@ -1130,6 +1180,7 @@ add.man.scenario <- function(rep, scenarioTitle = "",
                          intermediatePeriodCatchSDFac = intermediatePeriodCatchSDFac,
                          intermediatePeriodCatchList = intermediatePeriodCatchList,
                          ctol = ctol,
+                         evalBreakpointB = evalBreakpointB,
                          verbose = verbose,
                          dbg = dbg,
                          mancheck = FALSE)
@@ -1523,9 +1574,16 @@ man.timeline <- function(x, verbose = TRUE, obsonly = FALSE){
 #' @param fractiles List defining the fractiles of the 3 distributions of
 #'     'catch', 'bbmsy', and 'ffmsy'. By default (0.5) median is used for all 3
 #'     quantities. Please refer to the details for more information.
-#' @param breakpointB Breakpoint in terms of \eqn{B/B_{MSY}} for the
-#'     hockey-stick HCR. By default (0) no breakpoint is assumed. Please refer
-#'     to the details for more information.
+#' @param breakpointB Breakpoints in terms of \eqn{B/B_{MSY}} for the
+#'     hockey-stick HCR. By default (0) no breakpoint is assumed. If one value
+#'     is provided, F is reduced linearly to zero, if \eqn{B/B_{MSY}} is below
+#'     the breakpoint. If two values ara provided, F is reduced linearly to the
+#'     lower of the two provided values, if \eqn{B/B_{MSY}} is below the higher
+#'     and above the lower value, and F is zero if \eqn{B/B_{MSY}} is below the
+#'     lower value. The higher value corresponds to ICES's \eqn{B_{trigger}} and
+#'     the lower to ICES's \eqn{B_{lim}}. Note that the breakpoints are
+#'     evaluated at the start of the management period. Please refer to the
+#'     details for more information.
 #' @param safeguardB List defining an optional precautionary buffer by means of
 #'     a biomass reference level relative to \eqn{B/B_{MSY}} (\code{'limitB'};
 #'     default: 0, i.e. deactivating the PA buffer) and the risk aversion
@@ -1543,6 +1601,9 @@ man.timeline <- function(x, verbose = TRUE, obsonly = FALSE){
 #'     details for more information.
 #' @param ctol Tolerance of \code{optimise} when finding F that leads to
 #'     provided target catch (via arguments \code{cfac} or \code{cabs})
+#' @param evalBreakpointB Time for the evaluation of the hockey-stick component
+#'     of the HCR: 0 indicating start of the mangement period and 1 indicating
+#'     the end of the management period (default: 0).
 #' @param verbose Should detailed outputs be provided (default: TRUE).
 #' @param dbg Debug flag, dbg=1 some output, dbg=2 more output.
 #' @param mancheck Should the time-dependent objects in \code{inp} be checked
@@ -1581,6 +1642,7 @@ get.TAC <- function(rep,
                     intermediatePeriodCatchSDFac = 1,
                     intermediatePeriodCatchList = NULL,
                     ctol = 0.001,
+                    evalBreakpointB = 0,
                     verbose = TRUE,
                     dbg = 0,
                     mancheck = TRUE){
@@ -1660,6 +1722,7 @@ get.TAC <- function(rep,
                          intermediatePeriodCatchSDFac = intermediatePeriodCatchSDFac,
                          intermediatePeriodCatchList = intermediatePeriodCatchList,
                          ctol = ctol,
+                         evalBreakpointB = evalBreakpointB,
                          verbose = verbose,
                          dbg = dbg,
                          mancheck = FALSE)
